[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/Map/mainTilemap.tres" type="TileSet" id=1]
[ext_resource path="res://source/Screens/World.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://source/Objects/cursor.tscn" type="PackedScene" id=4]
[ext_resource path="res://source/Objects/ActionList.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/sound/system/BackSelect.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sound/system/coin.wav" type="AudioStream" id=7]

[node name="World" type="Node2D"]
script = ExtResource( 2 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 0, -1 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 8
format = 1
tile_data = PoolIntArray( 0, 0, 131074, 1, 0, 131074, 2, 0, 131074, 3, 0, 131074, 4, 0, 131074, 5, 0, 131074, 6, 0, 131074, 7, 0, 131074, 8, 0, 131074, 9, 0, 131074, 10, 0, 131074, 11, 0, 131074, 12, 0, 131074, 13, 0, 131074, 14, 0, 131074, 15, 0, 131074, 16, 0, 131074, 17, 0, 131074, 18, 0, 131074, 19, 0, 131074, 20, 0, 131074, 65536, 0, 131074, 65537, 0, 131074, 65538, 0, 131074, 65539, 0, 131074, 65540, 0, 131074, 65541, 0, 131074, 65542, 0, 131074, 65543, 0, 131074, 65544, 0, 131074, 65545, 0, 131074, 65546, 0, 131074, 65547, 0, 131072, 65548, 0, 131074, 65549, 0, 131074, 65550, 0, 131074, 65551, 0, 131074, 65552, 0, 131074, 65553, 0, 131074, 65554, 0, 131074, 65555, 0, 131074, 65556, 0, 131074, 131072, 0, 131074, 131073, 0, 131074, 131074, 0, 131074, 131075, 0, 131072, 131076, 0, 131074, 131077, 0, 131074, 131078, 0, 131074, 131079, 0, 131074, 131080, 0, 131074, 131081, 0, 131074, 131082, 0, 131074, 131083, 0, 131074, 131084, 0, 131074, 131085, 0, 131074, 131086, 0, 131074, 131087, 0, 131074, 131088, 0, 131074, 131089, 0, 131074, 131090, 0, 131074, 131091, 0, 131074, 131092, 0, 131074, 196608, 0, 196610, 196609, 0, 196610, 196610, 0, 196610, 196611, 0, 65539, 196612, 0, 196610, 196613, 0, 196610, 196614, 0, 131074, 196615, 0, 131074, 196616, 0, 131074, 196617, 0, 131074, 196618, 0, 131074, 196619, 0, 131074, 196620, 0, 131074, 196621, 0, 131074, 196622, 0, 131074, 196623, 0, 131074, 196624, 0, 131074, 196625, 0, 131074, 196626, 0, 131074, 196627, 0, 131072, 262144, 0, 131074, 262145, 0, 131074, 262146, 0, 131074, 262147, 0, 131074, 262148, 0, 131074, 262149, 0, 196610, 262150, 0, 131074, 262151, 0, 131074, 262152, 0, 131074, 262153, 0, 131074, 262154, 0, 131074, 262155, 0, 131074, 262156, 0, 131074, 262157, 0, 131074, 262158, 0, 131074, 262159, 0, 131074, 262160, 0, 131074, 262161, 0, 131074, 262162, 0, 131074, 262163, 0, 131074, 327680, 0, 131074, 327681, 0, 131074, 327682, 0, 131074, 327683, 0, 131074, 327684, 0, 131074, 327685, 0, 196610, 327686, 0, 131074, 327687, 0, 131074, 327688, 0, 131074, 327689, 0, 131074, 327690, 0, 131074, 327691, 0, 131074, 327692, 0, 131074, 327693, 0, 131074, 327694, 0, 131074, 327695, 0, 131074, 327696, 0, 131074, 327697, 0, 131074, 327698, 0, 131074, 327699, 0, 131074, 393216, 0, 131074, 393217, 0, 131074, 393218, 0, 131074, 393219, 0, 131074, 393220, 0, 131074, 393221, 0, 196610, 393222, 0, 196610, 393223, 0, 196610, 393224, 0, 196610, 393225, 0, 196610, 393226, 0, 196610, 393227, 0, 65539, 393228, 0, 196610, 393229, 0, 196610, 393230, 0, 196610, 393231, 0, 196610, 393232, 0, 196610, 393233, 0, 131074, 393234, 0, 131074, 393235, 0, 131074, 458752, 0, 131074, 458753, 0, 131074, 458754, 0, 131074, 458755, 0, 131074, 458756, 0, 131074, 458757, 0, 131074, 458758, 0, 131074, 458759, 0, 131074, 458760, 0, 131074, 458761, 0, 131074, 458762, 0, 131074, 458763, 0, 131074, 458764, 0, 131074, 458765, 0, 131074, 458766, 0, 131074, 458767, 0, 131074, 458768, 0, 196610, 458769, 0, 131074, 458770, 0, 131074, 458771, 0, 131074, 524288, 0, 131074, 524289, 0, 131074, 524290, 0, 131074, 524291, 0, 131074, 524292, 0, 131074, 524293, 0, 131074, 524294, 0, 131074, 524295, 0, 131074, 524296, 0, 131074, 524297, 0, 131074, 524298, 0, 131074, 524299, 0, 131074, 524300, 0, 131074, 524301, 0, 131074, 524302, 0, 131074, 524303, 0, 131072, 524304, 0, 65538, 524305, 0, 131072, 524306, 0, 131074, 524307, 0, 131074, 589824, 0, 131074, 589825, 0, 131074, 589826, 0, 131074, 589827, 0, 131074, 589828, 0, 131074, 589829, 0, 131074, 589830, 0, 131074, 589831, 0, 131074, 589832, 0, 131074, 589833, 0, 131074, 589834, 0, 131074, 589835, 0, 131074, 589836, 0, 131074, 589837, 0, 131074, 589838, 0, 131074, 589839, 0, 131074, 589840, 0, 196610, 589841, 0, 131074, 589842, 0, 131074, 589843, 0, 131072, 655360, 0, 131074, 655361, 0, 131074, 655362, 0, 131074, 655363, 0, 131074, 655364, 0, 131074, 655365, 0, 131074, 655366, 0, 131074, 655367, 0, 131074, 655368, 0, 131074, 655369, 0, 131074, 655370, 0, 131074, 655371, 0, 131074, 655372, 0, 131074, 655373, 0, 131074, 655374, 0, 131074, 655375, 0, 131074, 655376, 0, 196610, 655377, 0, 131074, 655378, 0, 131074, 655379, 0, 131074, 720896, 0, 131074, 720897, 0, 131074, 720898, 0, 131074, 720899, 0, 131074, 720900, 0, 131074, 720901, 0, 131074, 720902, 0, 131074, 720903, 0, 131074, 720904, 0, 131074, 720905, 0, 131074, 720906, 0, 131074, 720907, 0, 131074, 720908, 0, 131074, 720909, 0, 131074, 720910, 0, 131074, 720911, 0, 131074, 720912, 0, 196610, 720913, 0, 131074, 720914, 0, 131074, 720915, 0, 131074 )

[node name="gridhover" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )
limit_left = -16
limit_top = -16
offset_h = 1.0
offset_v = 1.0

[node name="DataDisplay" type="Panel" parent="."]
margin_left = 320.0
margin_top = -16.0
margin_right = 512.0
margin_bottom = 280.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="DataDisplay"]
position = Vector2( 64, 48 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="DataDisplay"]
margin_left = 8.0
margin_top = 88.0
margin_right = 120.0
margin_bottom = 104.0
text = "Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TerrainLbl" type="Label" parent="DataDisplay"]
margin_left = 8.0
margin_top = 120.0
margin_right = 120.0
margin_bottom = 151.0
text = "Terrain:
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DefLbl" type="Label" parent="DataDisplay"]
margin_left = 8.0
margin_top = 144.0
margin_right = 120.0
margin_bottom = 175.0
text = "Def:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cursor" parent="." instance=ExtResource( 4 )]

[node name="unitActions" parent="." instance=ExtResource( 5 )]

[node name="turnActions" parent="." instance=ExtResource( 5 )]
defaultOptions = [ "info", "save", "end turn" ]

[node name="Label" type="Label" parent="."]
margin_top = -16.0
margin_right = 64.0
rect_pivot_offset = Vector2( 72, 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tunitlbl" type="Label" parent="."]
margin_left = 128.0
margin_top = -16.0
margin_right = 192.0
rect_pivot_offset = Vector2( 72, 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="ok_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="stateLbl" type="Label" parent="."]
margin_left = 256.0
margin_top = -16.0
margin_right = 322.0
margin_bottom = -1.0
text = "State=wait"
__meta__ = {
"_edit_use_anchors_": false
}
